fixed white space with post meta

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -34,7 +34,8 @@
   width: auto;
   font-weight: 300;
   margin: 0;
-  padding: 0;
+  padding-top: 7px;
+  padding-bottom: 7px;
   color: #7a7a7a;
   font-style: italic;
 }
